# places_bot

./: pyproject.toml
data/: american-samoa_60_77.fgb  arkansas_05_625.fgb  connecticut_09_215.fgb  delaware_10_79.fgb  district-of-columbia_11_1.fgb  guam_66_57.fgb  hawaii_15_163.fgb  idaho_16_237.fgb  indiana_18_696.fgb  iowa_19_1028.fgb  kansas_20_740.fgb  kentucky_21_555.fgb  louisiana_22_488.fgb  maine_23_155.fgb  maryland_24_536.fgb  massachusetts_25_248.fgb  michigan_26_745.fgb  minnesota_27_913.fgb  mississippi_28_428.fgb  montana_30_497.fgb  nebraska_31_590.fgb  nevada_32_133.fgb  new-hampshire_33_100.fgb  new-mexico_35_527.fgb  north-dakota_38_406.fgb  northern-mariana-islands_69_135.fgb  not-viewed-places.csv  oregon_41_426.fgb  puerto-rico_72_292.fgb  rhode-island_44_36.fgb  south-dakota_46_486.fgb  utah_49_333.fgb  vermont_50_179.fgb  viewed-places.csv  virgin-islands-of-the-u.s._78_10.fgb  west-virginia_54_439.fgb  wyoming_56_205.fgb
places_bot/: __init__.py  city.py
scripts/: make-viewed-list.py  make_city_fgb.py
